syntax = "proto3";

package state;
option go_package = "./proto";

import "mempool.proto";  // Import the mempool proto file

message State {
  string block_hash = 1;
  uint64 block_height = 2;
  int64 timestamp = 3;
  repeated mempool.Transaction transactions = 4;
}

message Account {
  int64 id = 1;
  string address = 2;
  int64 balance = 3;
  uint64 nonce = 4;
  int64 timestamp = 5;
}

message CreateStateRequest {
  State state = 1;
}

message CreateStateResponse {
  string message = 1;
}

message GetAccountByAddressRequest {
  string address = 1;
}

message GetAccountByAddressResponse {
  Account account = 1;
}

service StateService {
  rpc CreateStateChange(CreateStateRequest) returns (CreateStateResponse);
  rpc GetAccountByAddress(GetAccountByAddressRequest) returns (GetAccountByAddressResponse);
}
